--- a/term.html
+++ b/term.html
@@ -52,7 +52,7 @@
             <div style="display: contents;">
                 <article class="npmo3Vk8vdpOrUnRlo4K">
                     <header style="">
-                        <p>General Terms Of Use For Hills Of Steel Game</p>
+                        <h2>General Terms Of Use For Hills Of Steel Game</h2>
 						<p>By accessing or using the site, you agree to be bound by this agreement and the terms of our privacy policy at https://hillsofsteelgame.github.io/term.html which are incorporated by this reference. This agreement shall remain in full force and effect while you use any of the Hills Of Steel family of sites.</p>
 						<p>Hills Of Steel LLC makes no promises that our visitors’ grades will improve by the use of any of our family of sites. Hills Of Steel LLC does not guarantee the accuracy of any information included in any of our family of sites, nor do we guarantee the accuracy of the information included in any of the sites we link to.</p>
 						<p>The information included in our family of sites is meant to supplement standard academic courses and classroom instruction. We are not responsible for any of the content included in any of our licensed content that is authored by people not employed by Hills Of Steel LLC,such as our games at Hills Of Steel is not responsible for any ads that may appear on our sites via error or malware viruses.</p>
