--- a/detail/bloxd-io - mau khong sua.html
+++ b/detail/bloxd-io - mau khong sua.html
@@ -92,17 +92,16 @@
                 <!-- Load list game -->
                 <div style="display: contents;" id="load_list_game">
                 </div>
-                <!-- ads 01 ngang left -->
+                <!-- ads 01 left -->
                 <div class="sc-tbf0fc-0 gKdPGs sc-al88rd-8 jLkOBn">
                     <div width="728" height="90" class="sc-tbf0fc-1 joJxfp">
                         <div style="height: 90px; width: 728px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 90px; width: 728px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-								 style="display:block"
-								 data-ad-client="ca-pub-3669370410817131"
-								 data-ad-slot="5290016702"
-								 data-ad-format="auto"
-								 data-full-width-responsive="true"></ins>
+                                    style="display:inline-block;width:728px;height:90px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="2426240798">
+                                </ins>
                                 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
@@ -117,11 +116,10 @@
                         <div style="height: 250px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 250px; width: 300px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-								 style="display:block"
-								 data-ad-client="ca-pub-3669370410817131"
-								 data-ad-slot="7924784874"
-								 data-ad-format="auto"
-								 data-full-width-responsive="true"></ins>
+                                    style="display:inline-block;width:300px;height:250px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="8608505768">
+                                </ins>
                                 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
@@ -137,12 +135,10 @@
                         <div style="height: 600px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 600px; width: 300px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-								 style="display:block"
-								 data-ad-client="ca-pub-3669370410817131"
-								 data-ad-slot="5290016702"
-								 data-ad-format="auto"
-								 data-full-width-responsive="true"></ins>
-								 <script>
+                                    style="display:inline-block;width:300px;height:600px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="3708465040"></ins>
+                                <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
                             </div>
@@ -156,11 +152,9 @@
                             <div style="height: 600px; width: 160px; overflow: hidden;">
                                 <!-- Eggy 160 600 -->
                                 <ins class="adsbygoogle"
-								 style="display:block"
-								 data-ad-client="ca-pub-3669370410817131"
-								 data-ad-slot="3785363344"
-								 data-ad-format="auto"
-								 data-full-width-responsive="true"></ins>
+                                    style="display:inline-block;width:160px;height:600px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="7598580926"></ins>
                                 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
