--- a/1v1-LOL.html
+++ b/1v1-LOL.html
@@ -108,7 +108,7 @@
                         <div style="height: 90px; width: 728px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 90px; width: 728px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-								 style="display:block"
+								 style="display:inline-block;width:728px;height:90px"
 								 data-ad-client="ca-pub-3669370410817131"
 								 data-ad-slot="5290016702"
 								 data-ad-format="auto"
@@ -127,7 +127,7 @@
                         <div style="height: 250px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 250px; width: 300px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-								 style="display:block"
+								 style="display:inline-block;width:300px;height:250px"
 								 data-ad-client="ca-pub-3669370410817131"
 								 data-ad-slot="7924784874"
 								 data-ad-format="auto"
@@ -147,7 +147,7 @@
                         <div style="height: 600px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 600px; width: 300px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-								 style="display:block"
+								 style="display:inline-block;width:300px;height:600px"
 								 data-ad-client="ca-pub-3669370410817131"
 								 data-ad-slot="5290016702"
 								 data-ad-format="auto"
@@ -166,7 +166,7 @@
                             <div style="height: 600px; width: 160px; overflow: hidden;">
                                 <!-- Eggy 160 600 -->
                                 <ins class="adsbygoogle"
-								 style="display:block"
+								style="display:inline-block;width:160px;height:600px"
 								 data-ad-client="ca-pub-3669370410817131"
 								 data-ad-slot="3785363344"
 								 data-ad-format="auto"
