--- a/bloxd-io.html
+++ b/bloxd-io.html
@@ -10,15 +10,25 @@
 
     <!-- Css -->
     <link rel="stylesheet" href="/css/style.css" />
-    <meta name="robots" content="noindex,nofollow" />
+    <!-- Css <meta name="robots" content="noindex,nofollow" />-->
     <!-- Dark Mode JS -->
     <script src="/js/darkMode.bundle.js"></script>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="/img/favicon.png" />
     <link rel="stylesheet" href="/css/grid.css" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3669370410817131"
-     crossorigin="anonymous"></script>
+					<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYZLSY9CD3"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-ZYZLSY9CD3');
+		</script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3669370410817131"
+		 crossorigin="anonymous"></script>
+    </head>
   </head>
 
   <body
@@ -92,16 +102,18 @@
                 <!-- Load list game -->
                 <div style="display: contents;" id="load_list_game">
                 </div>
-                <!-- ads 01 left -->
+            </div>
+			<!-- ads 01 ngang left -->
                 <div class="sc-tbf0fc-0 gKdPGs sc-al88rd-8 jLkOBn">
                     <div width="728" height="90" class="sc-tbf0fc-1 joJxfp">
                         <div style="height: 90px; width: 728px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 90px; width: 728px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-                                    style="display:inline-block;width:728px;height:90px"
-                                    data-ad-client="ca-pub-7889675448259925"
-                                    data-ad-slot="2426240798">
-                                </ins>
+								 style="display:block"
+								 data-ad-client="ca-pub-3669370410817131"
+								 data-ad-slot="5290016702"
+								 data-ad-format="auto"
+								 data-full-width-responsive="true"></ins>
                                 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
@@ -116,10 +128,11 @@
                         <div style="height: 250px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 250px; width: 300px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-                                    style="display:inline-block;width:300px;height:250px"
-                                    data-ad-client="ca-pub-7889675448259925"
-                                    data-ad-slot="8608505768">
-                                </ins>
+								 style="display:block"
+								 data-ad-client="ca-pub-3669370410817131"
+								 data-ad-slot="7924784874"
+								 data-ad-format="auto"
+								 data-full-width-responsive="true"></ins>
                                 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
@@ -135,10 +148,12 @@
                         <div style="height: 600px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
                             <div style="height: 600px; width: 300px; overflow: hidden;">
                                 <ins class="adsbygoogle"
-                                    style="display:inline-block;width:300px;height:600px"
-                                    data-ad-client="ca-pub-7889675448259925"
-                                    data-ad-slot="3708465040"></ins>
-                                <script>
+								 style="display:block"
+								 data-ad-client="ca-pub-3669370410817131"
+								 data-ad-slot="5290016702"
+								 data-ad-format="auto"
+								 data-full-width-responsive="true"></ins>
+								 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
                             </div>
@@ -152,9 +167,11 @@
                             <div style="height: 600px; width: 160px; overflow: hidden;">
                                 <!-- Eggy 160 600 -->
                                 <ins class="adsbygoogle"
-                                    style="display:inline-block;width:160px;height:600px"
-                                    data-ad-client="ca-pub-7889675448259925"
-                                    data-ad-slot="7598580926"></ins>
+								 style="display:block"
+								 data-ad-client="ca-pub-3669370410817131"
+								 data-ad-slot="3785363344"
+								 data-ad-format="auto"
+								 data-full-width-responsive="true"></ins>
                                 <script>
                                     (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
@@ -171,7 +188,13 @@
                         <h1 class="Wa2Xpu5vfbxVCjRv2Gv_">Bloxd.io</h1>
                     </header>
                     <div class="U5UHxulLIj1mqRNKVoIl">
-                        Let's play
+                        <p>Bloxd.io is the ultimate online hangout where you can build epic creations, battle it out with friends, and have a blocktastic time!  This free game lets you unleash your inner architect and engineer by building anything you can imagine, from towering castles to hidden underground lairs.</p>
+
+						<p>But Bloxd.io isn't just about building – it's about putting your creations to the test!  Once you've built your masterpiece, team up with friends or challenge other players to see whose blocky base is the strongest.  Battle it out with awesome tools and power-ups, all in a world made entirely of colorful blocks!</p>
+
+						<p>Explore a variety of maps, each with its own unique challenges and opportunities.  Will you build a sky fortress for ultimate defense, or a sneaky maze to confuse your opponents?  The choice is yours!  With tons of customization options for your character and tools, Bloxd.io lets you play your way to blocky glory.</p>
+
+						<p>So, can you build the ultimate base, outsmart your rivals, and become the champion of Bloxd.io?  Download it for free now and join the block party!  Just remember, with great building power comes great responsibility... to have tons of fun!</p>
                     </div>
                 </article>
             </div>
@@ -199,37 +222,6 @@
     <script src="/js/play.js?v=4"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        function sortByOrder(games) {
-            return games.sort((a, b) => b.order - a.order);
-        }
-        function loadListGame(dataListGame){
-            fetch(dataListGame,{
-                headers: {
-                    'Content-Type': 'application/json',
-                    },
-            }).then(response => response.json())
-            .then(data => {
-                listGame = sortByOrder(data);
-                for (var j=listGame.length-1; j>=0; j--) {
-                    var item = listGame[j];  
-                    var dataLogo = "/images/logo/"+item.img;
-                    var dataAlt = item.title;
-                    var dataHref = "/detail/"+item.slug+".html";
-                    var htmlItem = `
-                        <img src="${dataLogo}" alt="${dataAlt}" loading="lazy" width="94" height="94" decoding="async" class="sc-18mcksl-1 jQcWfv">
-                        <span class="sc-963fcq-0 ibRKmB global-cq-title">${dataAlt}</span>
-                    `;
-                    const e = document.createElement('a');
-                    e.className  = "sc-wr3rvk-0 jcoQuw sc-963fcq-3 djzSvC sc-al88rd-4";
-                    e.href = dataHref;
-                    e.innerHTML = htmlItem;
-                    document.getElementById('load_list_game').appendChild(e);
-                    
-                }
-                document.getElementById('load_list_game').scrollIntoView();
-            });
-
-        }
         $(function() {
             /* Load file header dùng chung */
             $("#load_header").load("/layout/header.html");
@@ -237,8 +229,6 @@
             $("#load_footer").load("/layout/footer.html");
             /* Load file svg dùng chung */
             $("#load_svg").load("/layout/svg-game.html");
-            /* Load list game */
-            loadListGame("/game/all.json");
         });
     </script>
   </body>
