--- a/hills-of-steel.html
+++ b/hills-of-steel.html
@@ -54,7 +54,7 @@
                             <div class="sc-1nfyi8d-0 cToZbD">
                                 <div class="sc-1nfyi8d-1 kmawNJ">
                                     <div class="sc-1nfyi8d-2 ljHJwR">
-                                        <div class="sc-1nfyi8d-3 iIUrNJ" id="game-arena" data-url="https://edufall.github.io/o1/hills-of-steel/">
+                                        <div class="sc-1nfyi8d-3 iIUrNJ" id="game-arena" data-url="https://edufall.github.io/o30/hills-of-steel">
                                             <div class="game-iframe-container" id="loadgame">
                                                 <div class="talpa-splash-container" style="background: var(--color2);">
                                                     <div class="talpa-splash-top">
