--- a/bloxd-io.html
+++ b/bloxd-io.html
@@ -17,8 +17,15 @@
     <!-- Favicons -->
     <link rel="shortcut icon" href="/img/favicon.png" />
     <link rel="stylesheet" href="/css/grid.css" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3669370410817131"
-     crossorigin="anonymous"></script>
+	<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYZLSY9CD3"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-ZYZLSY9CD3');
+		</script>
   </head>
 
   <body
