--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> class="topVAZ-logo"
 <html lang="en">
     <head>
         <title>Hills Of Steel</title>
@@ -26,8 +26,6 @@
 
 		  gtag('config', 'G-ZYZLSY9CD3');
 		</script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3669370410817131"
-		 crossorigin="anonymous"></script>
     </head>
 
     <body
