--- a/hole-io.html
+++ b/hole-io.html
@@ -102,6 +102,78 @@
                 </div>
             </div>
             </div>
+			<!-- ads 01 left -->
+                <div class="sc-tbf0fc-0 gKdPGs sc-al88rd-8 jLkOBn">
+                    <div width="728" height="90" class="sc-tbf0fc-1 joJxfp">
+                        <div style="height: 90px; width: 728px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
+                            <div style="height: 90px; width: 728px; overflow: hidden;">
+                                <ins class="adsbygoogle"
+                                    style="display:inline-block;width:728px;height:90px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="2426240798">
+                                </ins>
+                                <script>
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
+                                </script>
+                            </div>
+                      </div>
+                      <div width="728" height="90" class="sc-tbf0fc-2 flYexE">Advertisement</div>
+                    </div>
+                </div>
+                <!-- ads 02 right -->
+                <div class="sc-tbf0fc-0 gKdPGs sc-al88rd-9 kBFpxV">
+                    <div width="300" height="250" class="sc-tbf0fc-1 iZddyZ">
+                        <div style="height: 250px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
+                            <div style="height: 250px; width: 300px; overflow: hidden;">
+                                <ins class="adsbygoogle"
+                                    style="display:inline-block;width:300px;height:250px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="8608505768">
+                                </ins>
+                                <script>
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
+                                </script>
+                            </div>
+                        </div>
+                        <div width="300" height="250" class="sc-tbf0fc-2 jtzqHS">Advertisement</div>
+                    </div>
+                </div>
+                <!-- ads 03 bottun ngang -->
+                <div class="sc-tbf0fc-0 gKdPGs sc-al88rd-9 ads-600">
+                    <div width="300" height="600" class="sc-tbf0fc-1 iZddyZ">
+                        <div width="300" height="600" class="sc-tbf0fc-2 jtzqHS">Advertisement</div>
+                        <div style="height: 600px; width: 300px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
+                            <div style="height: 600px; width: 300px; overflow: hidden;">
+                                <ins class="adsbygoogle"
+                                    style="display:inline-block;width:300px;height:600px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="3708465040"></ins>
+                                <script>
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- ads 04 bottun doc -->
+                <div class="sc-tbf0fc-0 gKdPGs sc-al88rd-10 jqewXp">
+                    <div width="160" height="600" class="sc-tbf0fc-1 iZddyZ">
+                        <div style="height: 600px; width: 160px; overflow: hidden;" class="sc-tbf0fc-3 jzKgDP">
+                            <div style="height: 600px; width: 160px; overflow: hidden;">
+                                <!-- Eggy 160 600 -->
+                                <ins class="adsbygoogle"
+                                    style="display:inline-block;width:160px;height:600px"
+                                    data-ad-client="ca-pub-7889675448259925"
+                                    data-ad-slot="7598580926"></ins>
+                                <script>
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
+                                </script>
+                            </div>
+                        </div>
+                        <div width="160" height="600" class="sc-tbf0fc-2 jtzqHS">Advertisement</div>
+                    </div>
+                </div>
+            </div>
             <!-- Content game -->
             <div style="display: contents;">
                 <article class="npmo3Vk8vdpOrUnRlo4K">
