--- a/hills-of-steel.html
+++ b/hills-of-steel.html
@@ -2,28 +2,33 @@
 <html lang="en">
   <head>
     <title>Hills Of Steel</title>
-
     <meta charset="utf-8" />
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Hills of Steel is an exciting action-packed online game. Take your tank through challenging terrains and dominate online battles, and become a steel champion." />
 
-    <!-- Css -->
-    <link rel="stylesheet" href="/css/style.css" />
-    <meta name="robots" content="noindex,nofollow" />
-    <!-- Dark Mode JS -->
-    <script src="/js/darkMode.bundle.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/jquery-comments.css" />
+	<link rel="stylesheet" type="text/css" href="css/user.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+	<!-- Font Awesome icons (free version)-->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<!-- Google fonts-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="/img/favicon.png" />
     <link rel="stylesheet" href="/css/grid.css" />
-					<!-- Google tag (gtag.js) -->
+	<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYZLSY9CD3"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-
 		  gtag('config', 'G-ZYZLSY9CD3');
 		</script>
     </head>
