--- a/dmca.html
+++ b/dmca.html
@@ -39,8 +39,8 @@
             <!-- <a class="nav-link " href="/playroblox">Roblox</a>  -->
             </div>
             <div class="d-none d-lg-block" style="padding-left: 10px;">
-            <a title="geometry-games" href="https://hillsofsteelgame.github.io">
-            <img src="images/logo.png" alt="geometry-games" width="70" height="35">
+            <a title="Hills-Of-Steel" href="https://hillsofsteelgame.github.io">
+            <img src="images/logo.png" alt="Hills-Of-Steel" width="70" height="35">
             </div>
         </a>
         </div>
@@ -68,7 +68,7 @@
                                     <li>Your physical or electronic signature.</li>
                                 </ul>
                                 <p>Please send the Notice to [contact email]. Upon receipt of a valid Notice, we will take appropriate actions, which may include removing or disabling access to the infringing material.</p>
-                                <p>For any queries about these terms, please contact us at geometrygame@gmail.com.</p>
+                                <p>For any queries about these terms, please contact us at hillsofsteelgame@gmail.com.</p>
                                 <p>Last updated: 01/01/2024</p>
                             </div>
                         </div> <!-- end widget Popular -->
