--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-    <title>Contact Us At geometrygame.github.io </title>
+    <title>Contact Us At hillsofsteelgame.github.io </title>
     <meta name="robots" content="noindex,nofollow" />
       <link rel="icon" href="images/favicon.png" sizes="32x32">
 
@@ -32,14 +32,14 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong> 
-            geometrygame.github.io
+            hillsofsteelgame.github.io
             </strong> </span></a>
             </div> <!-- end nav-menu -->
             <div class="d-none d-lg-block" style="padding-left: 10px;">
             <!-- <a class="nav-link " href="/playroblox">Roblox</a>  -->
             </div>
             <div class="d-none d-lg-block" style="padding-left: 10px;">
-            <a title="geometry-games" href="https://geometrygame.github.io">
+            <a title="geometry-games" href="https://hillsofsteelgame.github.io">
             <img src="images/logo.png" alt="geometry-games" width="70" height="35">
             </div>
         </a>
