--- a/1v1-lol.html
+++ b/1v1-lol.html
@@ -38,6 +38,8 @@
 		  gtag('config', 'G-ZYZLSY9CD3');
 		</script>		
     <!-- ads -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956380078178807"
+     crossorigin="anonymous"></script>
 
 </head>
 <body id="page-top" style="background: url('/images/background1.png'); background-size: cover;"
