--- a/all-games.html
+++ b/all-games.html
@@ -37,6 +37,8 @@
 		  gtag('config', 'G-ZYZLSY9CD3');
 		</script>
     <!-- ads -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956380078178807"
+     crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <!-- ads -->
 
