--- a/bloxd-io.html
+++ b/bloxd-io.html
@@ -39,6 +39,8 @@
 		  gtag('config', 'G-ZYZLSY9CD3');
 		</script>
     <!-- ads -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956380078178807"
+     crossorigin="anonymous"></script>
     <!-- ads -->
 
 </head>
